# change-ip

./: README.md  inteface.py  main.py  pyproject.toml  static_ip.bat
change-ip/: static_ip.bat
output/: dhcp_ip.bat
