[tool.poetry]
name = "change-ip"
version = "0.1.0"
description = "Script for change ip addres"
authors = ["Felipe Augusto <97059009+felipeadsm@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "change_ip"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
